--- a/ISRMUL.csproj
+++ b/ISRMUL.csproj
@@ -81,6 +81,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Manuscript\Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -108,10 +109,18 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Manuscript\" />
     <Folder Include="Recongnition\Alphabet\" />
     <Folder Include="Recongnition\Neokognitron\" />
     <Folder Include="Recongnition\Segmentation\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Control\Page\images\error.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Control\Page\images\add.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Control\Page\images\delete.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
