--- a/ISRMUL.csproj
+++ b/ISRMUL.csproj
@@ -162,6 +162,9 @@
   <ItemGroup>
     <Resource Include="Control\Editor\images\segmentation.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Control\Editor\images\delete.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
