--- a/ISRMUL.csproj
+++ b/ISRMUL.csproj
@@ -88,8 +88,8 @@
     <Compile Include="Recognition\Neokognitron\WTAIntermadiateTrainer.cs" />
     <Compile Include="Recognition\Segmentation\KMeansPlus\Cluster.cs" />
     <Compile Include="Recognition\Segmentation\KMeansPlus\Cosin.cs" />
-    <Compile Include="Recognition\Segmentation\KMeansPlus\Evklid.cs" />
-    <Compile Include="Recognition\Segmentation\KMeansPlus\Evklid2.cs" />
+    <Compile Include="Recognition\Segmentation\KMeansPlus\Euclidean.cs" />
+    <Compile Include="Recognition\Segmentation\KMeansPlus\Euclidean2.cs" />
     <Compile Include="Recognition\Segmentation\KMeansPlus\IDistansion.cs" />
     <Compile Include="Recognition\Segmentation\KMeansPlus\KMeans.cs" />
     <Compile Include="Recognition\Segmentation\KMeansPlus\Vector.cs" />
