--- a/ISRMUL.csproj
+++ b/ISRMUL.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Recognition\Segmentation\KMeansPlus\IDistansion.cs" />
     <Compile Include="Recognition\Segmentation\KMeansPlus\KMeans.cs" />
     <Compile Include="Recognition\Segmentation\KMeansPlus\Vector.cs" />
+    <Compile Include="Recognition\Segmentation\KMeansPlus\CosinExp.cs" />
     <Compile Include="Recognition\Segmentation\MeanShift\Cluster.cs" />
     <Compile Include="Recognition\Segmentation\MeanShift\MeanShiftSolver.cs" />
     <Compile Include="Recognition\Segmentation\MeanShift\Point.cs" />
